# sensor-api-python-client

./: .gitignore  CONTRIBUTORS.txt  README.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  tox.ini
senaps_sensor/: __init__.py  api.py  binder.py  models.py  parsers.py
src/senaps_sensor/: __init__.py  api.py  auth.py  binder.py  models.py  parsers.py
src/sensetdp/: api.py  models.py
tests/: config.py  test_api.py  test_auth.py  test_internal_auth.py  test_parsers.py
venv35/: pip-selfcheck.json
