
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senaps_sensor"
description = "Senaps Sensor Data API Client"
readme = "readme.md"
dynamic = ["version"]
license = { text = "MIT License" }
authors = [{ name = "CSIRO Data61", email = "senaps@csiro.au" }]
keywords = ["senaps", "sensor", "api", "client", "library"]
dependencies = [
  "requests>=2.22.0,<3.0.0",
  "six>=1.7.3",
  "enum34; python_version < '3.4.0'",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
]
requires-python = ">=2.7"

[project.optional-dependencies]
pandas = ["pandas>=0.18.1,<=0.25.3"]

[tool.setuptools.packages]
find = { where = ["src"], exclude = ["tests"] }
